--- a/BEM/package.json
+++ b/BEM/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "es6toie8",
+  "name": "BEM",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:prod": "rm -rf dist && webpack",
-    "build": "rm -rf dist && webpack",
-    "dev": "webpack-dev-server --open"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "wscss": "node-sass --watch scss -o css",
+    "dev": "webpack-dev-server --open google-chrome"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
+    "ejs": "^2.6.1",
+    "ejs-html-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
+    "jquery-1x": "^1.12.1",
     "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2",
-    "jquery-1x": "^1.12.1"
+    "webpack-dev-server": "^2.11.2"
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
